deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rblack
spec:
  selector:
    app: rblack
  ports:
  # Default port used by the image
  - port: 8080
